--- a/vercel.json
+++ b/vercel.json
@@ -17,7 +17,7 @@
     }
     ],
     "env": {
-    "MONGO_URI": "mongodb+srv://ibrahim904072:MrzQFoPSS84RHBDB@user.r8o7v.mongodb.net/?retryWrites=true&w=majority&appName=user",
+    "MONGO_URI": "mongodb+srv://23pwbcs0960:p84u5IrTIeR9HR8M@ibrahimproject.avsat.mongodb.net/?retryWrites=true&w=majority&appName=user",
     "JWT_SECRET": "your_jwt_secret_key",
     "PORT": "5000"
     }
